# behavior_generation_lecture_python

./: .gitlab-ci.yml  404.html  CODEOWNERS  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: cd.yml  ci.yml
docs/: gen_ref_pages.py
docs/slides/: software_intro.html
gen_ref_pages/: gen_ref_pages.py  index.html
notebooks/: a_star_notebook.ipynb  compare_models_notebook.ipynb  lateral_control_ricatti_notebook.ipynb  lateral_control_riccati_notebook.ipynb  lateral_control_state_based_notebook.ipynb  mdp-colab-tasks.ipynb  mdp-colab.ipynb  mdp.ipynb  mdp_policy_gradient.ipynb  mdp_policy_gradient_solutions.ipynb  mdp_policy_gradient_tasks.ipynb  mdp_q_learning.ipynb  mdp_q_learning_solutions.ipynb  mdp_q_learning_tasks.ipynb  mdp_value_iteration.ipynb  mdp_value_iteration_tasks.ipynb
notebooks/a_star_notebook/: index.html
notebooks/compare_models_notebook/: compare_models_notebook.ipynb  index.html
notebooks/lateral_control_riccati_notebook/: index.html  lateral_control_riccati_notebook.ipynb
notebooks/lateral_control_state_based_notebook/: index.html  lateral_control_state_based_notebook.ipynb
notebooks/mdp_policy_gradient/: index.html  mdp_policy_gradient.ipynb
notebooks/mdp_q_learning/: index.html  mdp_q_learning.ipynb
notebooks/mdp_value_iteration/: index.html  mdp_value_iteration.ipynb
reference/SUMMARY/: SUMMARY.md  index.html
reference/behavior_generation_lecture_python/graph_search/: index.html  index.md
reference/behavior_generation_lecture_python/graph_search/a_star/: a_star.md  index.html
reference/behavior_generation_lecture_python/mdp/: index.html  index.md
reference/behavior_generation_lecture_python/mdp/mdp/: index.html  mdp.md
reference/behavior_generation_lecture_python/mdp/policy/: index.html  policy.md
scripts/: run_a_star.py  run_compare_dynamic_one_track_models.py  run_finite_state_machine_cli.py  run_finite_state_machine_visu.py  run_lateral_control_riccati.py  run_lateral_control_state_based.py
search/: search_index.json
src/behavior_generation_lecture_python/finite_state_machine/: traffic_light_state_machine.py  traffic_light_state_machine_with_visu.py  traffic_light_visualization.py
src/behavior_generation_lecture_python/graph_search/: a_star.py
src/behavior_generation_lecture_python/lateral_control_riccati/: lateral_control_riccati.py  riccati_controller.py
src/behavior_generation_lecture_python/lateral_control_state_based/: lateral_control_state_based.py  state_based_controller.py
src/behavior_generation_lecture_python/mdp/: mdp.py  policy.py
src/behavior_generation_lecture_python/utils/: __init__.py  generate_reference_curve.py  grid_plotting.py  normalize_angle.py  projection.py  reference_curve.py
src/behavior_generation_lecture_python/utils/plot_vehicle/: plot_vehicle.py
src/behavior_generation_lecture_python/utils/vizard/: vizard.py
src/behavior_generation_lecture_python/vehicle_models/: dynamic_one_track_model.py  dynamic_one_track_model_linearized.py  kinematic_one_track_model.py  model_comparison.py  vehicle_parameters.py
src/finite_state_machine/: traffic_light_state_machine_with_visu.py
src/graph_search/: a_star.py
src/lateral_control_riccati/: lateral_control_riccati.py  riccati_controller.py
src/lateral_control_state_based/: lateral_control_state_based.py  state_based_controller.py
src/mdp/: mdp.py
src/utils/: generate_reference_curve.py  normalize_angle.py  projection.py
src/utils/plot_vehicle/: f10.npy  plot_vehicle.py
src/utils/vizard/: vizard.py
src/vehicle_models/: dynamic_one_track_model.py  dynamic_one_track_model_linearized.py  model_comparison.py
tests/: test_a_star.py  test_compare_dynamic_one_track_models.py  test_lateral_control_riccati.py  test_lateral_control_state_based.py  test_mdp.py  test_mdp_lecture_tex.py  test_state_based_control.py
tests/finite_state_machine/: test_traffic_light_state_machine.py  test_traffic_light_state_machine_visu.py
tests/utils/: test_generate_reference_curve.py  test_grid_plotting.py  test_normalize_angle.py  test_projection.py  test_vizard.py
