[project]
name = "behavior_generation_lecture_python"
version = "0.0.2"
description = "Python code for the respective lecture at KIT"
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = {file = "LICENSE"}
authors = [
  {name = "Organizers of the lecture 'Decision-Making and Motion Planning for Automated Driving' at KIT" }
]
maintainers = [
  {name = "Maximilian Naumann", email = "maximilian.naumann@de.bosch.com" }
]

dependencies = [
  "numpy>=1.26.0",
  "matplotlib>=2.2.4",
  "scipy>=1.11.0",
  "jupyter",
  "python-statemachine",
  "torch",
  "ruff>=0.8.3",
  "ipykernel>=6.29.5",
  "ipython>=8.12.3",
  "jupyterlab>=4.3.3",
  "ipywidgets>=8.1.5",
  "ipympl>=0.9.5",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov>=3.0.0",
  "mypy",
]
docs = [
  "mkdocs-material",
  "mkdocs-jupyter",
  "mkdocstrings[python]>=0.18",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-section-index"
]

[project.urls]  # Optional
"Homepage" = "https://kit-mrt.github.io/behavior_generation_lecture_python/"
"Bug Reports" = "https://github.com/KIT-MRT/behavior_generation_lecture_python/issues"
"Source" = "https://github.com/KIT-MRT/behavior_generation_lecture_python"

[build-system]
requires = ["setuptools>=64.0.0", "wheel", "pip>=21.3.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Check src, scripts, and notebooks
include = ["src/**/*.py", "scripts/**/*.py", "notebooks/**/*.ipynb"]

# Exclude files that aren't ready yet
exclude = [
    "notebooks/compare_models_notebook.ipynb",
    "notebooks/lateral_control_riccati_notebook.ipynb",
    "notebooks/lateral_control_state_based_notebook.ipynb",
    "scripts/run_compare_dynamic_one_track_models.py",
    "scripts/run_lateral_control_riccati.py",
    "scripts/run_lateral_control_state_based.py",
    "src/behavior_generation_lecture_python/finite_state_machine/traffic_light_visualization.py",
    "src/behavior_generation_lecture_python/lateral_control_riccati/lateral_control_riccati.py",
]

[tool.ruff.lint]
# Ignore specific rules globally that are too noisy
ignore = [
    "E731",  # Do not assign a lambda expression, use a def
]

[tool.mypy]
python_version = "3.12"
strict = false # for now
ignore_missing_imports = true

# Files/folders to check (notebooks are checked by ruff, not mypy)
files = ["src", "scripts"]

# Exclude files/folders that aren't fully typed yet
exclude = [
    "src/behavior_generation_lecture_python/finite_state_machine/",
    "src/behavior_generation_lecture_python/vehicle_models/",
    "src/behavior_generation_lecture_python/graph_search/",
    "src/behavior_generation_lecture_python/utils/vizard/",
    "src/behavior_generation_lecture_python/utils/grid_plotting.py",
    "src/behavior_generation_lecture_python/lateral_control_riccati/lateral_control_riccati.py",
    "scripts/run_finite_state_machine_cli.py",
    "scripts/run_finite_state_machine_visu.py",
    "scripts/run_compare_dynamic_one_track_models.py",
    "scripts/run_a_star.py",
]
